gap fix

--- a/platform/css/footer.css
+++ b/platform/css/footer.css
@@ -5,6 +5,7 @@
 
 .footer .row .socials {
     margin-top: 10px;
+    gap: 10px;
 }
 
 .footer .row p,
